# pyo3-type-desc

./: .gitignore  Cargo.toml
numpy-derive/: Cargo.toml
numpy-derive/src/: lib.rs
numpy-type-desc/: Cargo.toml
numpy-type-desc/src/: datetime.rs  desc.rs  dtype.rs  element.rs  lib.rs  macros.rs  npyffi.rs
numpy-type-desc/tests/: test_derive.rs
src/: buffer.rs  common.rs  desc.rs  element.rs  lib.rs  parse.rs  scalar.rs
